--- a/main.css
+++ b/main.css
@@ -16,5 +16,8 @@ html {
 /***** BODY *****/
 
 body {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
